--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -80,7 +80,8 @@
             android:background="@drawable/round_back_secondary"
             android:text="Edit Profile"
             android:textColor="@color/statusbar"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:onClick="goToEditProfile"/>
 
         <LinearLayout
             android:layout_width="match_parent"
