--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -2,14 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Theme.MyApplication">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/users_RV" />
+        android:id="@+id/users_RV"
+
+        />
 
     <LinearLayout
         android:layout_width="93dp"
@@ -60,7 +61,6 @@
             app:srcCompat="@drawable/ic_baseline_person_add_24" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/Widget.Material3.FloatingActionButton.Primary"
             android:id="@+id/add_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
