--- a/app/src/main/res/layout/activity_add_phone_contact.xml
+++ b/app/src/main/res/layout/activity_add_phone_contact.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_gravity="center"
     android:padding="1dp"
+    android:background="@color/statusbar"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp">
+
         <EditText
             android:id="@+id/add_phone_contact_display_name"
             android:hint="@string/name"
@@ -17,7 +26,9 @@
             android:layout_height="wrap_content"
             android:autofillHints="name"
             android:inputType="textAutoComplete"
-            tools:ignore="TextFields" />
+            tools:ignore="TextFields"
+            android:background="@drawable/round_back_white"
+            android:padding="10dp"/>
         <EditText
             android:id="@+id/add_phone_contact_number"
             android:hint="@string/phone"
@@ -26,7 +37,9 @@
             android:paddingStart="@dimen/_16sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints="phone" />
+            android:autofillHints="phone"
+            android:background="@drawable/round_back_white"
+            android:padding="10dp"/>
 
         <Spinner
             android:id="@+id/add_phone_contact_type"
@@ -34,14 +47,17 @@
             android:autofillHints="phone"
             android:layout_marginStart="@dimen/_46sdp"
             android:layout_marginEnd="@dimen/_46sdp"
-
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:spinnerMode="dropdown"/>
-    <Button
-        android:id="@+id/add_phone_contact_save_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_16sdp"
-        android:text="@string/save_phone_contact"/>
+        <Button
+            android:id="@+id/add_phone_contact_save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_16sdp"
+            android:text="@string/save_phone_contact"/>
+
+
+    </LinearLayout>
+
 </LinearLayout>
