--- a/app/src/main/res/drawable/back_button.xml
+++ b/app/src/main/res/drawable/back_button.xml
@@ -1,8 +1,8 @@
 <vector
-    android:height="24dp"
+    android:height="@dimen/_24sdp"
     android:viewportHeight="24"
     android:viewportWidth="24"
-    android:width="24dp"
+    android:width="@dimen/_24sdp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <path android:fillColor="@android:color/white"
