--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -129,9 +129,9 @@
                     android:id="@+id/app_lock_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:background="@drawable/round_background_button"
                     android:padding="12dp"
-                    android:src="@drawable/app_lock"
-                    android:background="@drawable/round_background_button"/>
+                    android:src="@drawable/app_lock" />
 
                 <TextView
                     android:layout_width="wrap_content"
