--- a/app/src/main/res/layout/activity_add_phone_contact.xml
+++ b/app/src/main/res/layout/activity_add_phone_contact.xml
@@ -3,63 +3,94 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_gravity="center"
     android:padding="1dp"
     android:background="@color/statusbar"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:onClick="goToHome"
+            android:padding="14dp"
+            android:src="@drawable/back_button" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Create new contact"
+            android:textColor="#ffff"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="20dp"
+        android:layout_gravity="center"
+        android:layout_margin="20dp"
         android:background="@drawable/round_back_white"
-        android:layout_margin="20dp">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp">
 
         <EditText
             android:id="@+id/add_phone_contact_display_name"
-            android:hint="@string/name"
-            android:lines="1"
-            android:paddingStart="@dimen/_16sdp"
-            android:layout_margin="@dimen/_16sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_16sdp"
             android:autofillHints="name"
-            android:inputType="textAutoComplete"
-            tools:ignore="TextFields"
             android:background="@drawable/round_background_button"
-            android:padding="10dp"/>
+            android:hint="@string/name"
+            android:inputType="textAutoComplete"
+            android:lines="1"
+            android:padding="10dp"
+            android:paddingStart="@dimen/_16sdp"
+            tools:ignore="TextFields" />
+
         <EditText
             android:id="@+id/add_phone_contact_number"
-            android:hint="@string/phone"
-            android:layout_margin="@dimen/_16sdp"
-            android:inputType="phone"
-            android:paddingStart="@dimen/_16sdp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_16sdp"
             android:autofillHints="phone"
             android:background="@drawable/round_background_button"
-            android:padding="10dp"/>
+            android:hint="@string/phone"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:paddingStart="@dimen/_16sdp" />
 
-        <Spinner
-            android:id="@+id/add_phone_contact_type"
-            android:layout_weight="1.3"
-            android:autofillHints="phone"
-            android:layout_marginStart="@dimen/_46sdp"
-            android:layout_marginEnd="@dimen/_46sdp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:spinnerMode="dropdown"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:background="@drawable/round_background_button"
-            android:padding="10dp"/>
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/add_phone_contact_type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/_46sdp"
+                android:layout_marginEnd="@dimen/_46sdp"
+                android:layout_weight="1.3"
+                android:autofillHints="phone"
+                android:padding="10dp"
+                android:spinnerMode="dropdown" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/add_phone_contact_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_16sdp"
-            android:text="@string/save_phone_contact"/>
+            android:text="@string/save_phone_contact" />
 
 
     </LinearLayout>
