--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/app_theme">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/users_RV"
-
-        />
+        android:id="@+id/users_RV"/>
 
     <LinearLayout
         android:layout_width="93dp"
@@ -24,6 +23,7 @@
             android:id="@+id/add_new_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/Widget.Material3.FloatingActionButton.Primary"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/_6sdp"
             android:clickable="true"
@@ -69,7 +69,6 @@
             android:contentDescription="@string/open_add"
             android:elevation="@dimen/_8sdp"
             android:src="@drawable/ic_baseline_add_24" />
-
     </LinearLayout>
 
 </FrameLayout>
