--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/backButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:onClick="goToHome"
+            android:onClick="goBack"
             android:padding="14dp"
             android:src="@drawable/back_button" />
 
