--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -15,7 +15,7 @@
             android:layout_height="50dp"
             android:src="@drawable/back_button"
             android:padding="14dp"
-            android:onClick="goToHome"/>
+            android:onClick="goBack"/>
 
         <TextView
             android:layout_width="wrap_content"
