--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -3,18 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/app_theme">
+    style="@style/Theme.MyApplication">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/users_RV"/>
+        android:id="@+id/users_RV" />
 
     <LinearLayout
         android:layout_width="93dp"
         android:layout_height="wrap_content"
+
         android:layout_gravity="bottom|end"
+
         android:layout_marginEnd="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:orientation="vertical">
@@ -23,7 +25,6 @@
             android:id="@+id/add_new_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.Material3.FloatingActionButton.Primary"
             android:layout_gravity="center"
             android:layout_marginBottom="@dimen/_6sdp"
             android:clickable="true"
@@ -62,6 +63,8 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_fab"
+            android:backgroundTint="@color/statusbar"
+            style="@style/Widget.Material3.FloatingActionButton.Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -69,6 +72,7 @@
             android:contentDescription="@string/open_add"
             android:elevation="@dimen/_8sdp"
             android:src="@drawable/ic_baseline_add_24" />
+
     </LinearLayout>
 
 </FrameLayout>
