--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.myapplication.ui.main.Home"
-    style="@style/Theme.MyApplication">
+    android:background="@color/statusbar"
+    tools:context="com.example.myapplication.ui.main.Home">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -16,69 +16,94 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/statusbar">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/current_user_profile_image"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
                     android:layout_gravity="center"
-                    android:src="@mipmap/logo"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="@dimen/_1sdp"
                     android:layout_marginStart="@dimen/_15sdp"
+                    android:onClick="goToProfile"
+                    android:src="@mipmap/logo"
+                    app:civ_border_color="@color/white"
+                    app:civ_border_width="@dimen/_1sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="SpeakableTextPresentCheck" />
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minHeight="?actionBarSize"
-                    android:text="@string/app_name"
-                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-                    android:textSize="@dimen/_20ssp"
-                    android:layout_marginStart="@dimen/_15sdp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/current_user_profile_image"
-                    app:layout_constraintTop_toTopOf="parent" />
+                <!--                <TextView-->
+                <!--                    android:id="@+id/title"-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_gravity="center"-->
+                <!--                    android:gravity="center"-->
+                <!--                    android:minHeight="?actionBarSize"-->
+                <!--                    android:text="@string/app_name"-->
+                <!--                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"-->
+                <!--                    android:textSize="@dimen/_20ssp"-->
+                <!--                    android:layout_marginStart="@dimen/_15sdp"-->
+                <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--                    app:layout_constraintStart_toEndOf="@+id/current_user_profile_image"-->
+                <!--                    app:layout_constraintTop_toTopOf="parent" />-->
 
-                <Button
-                    android:id="@+id/settings_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+
+                <com.sarnava.textwriter.TextWriter
+                    android:id="@+id/title"
+                    android:layout_width="148dp"
+                    android:layout_height="36dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
-                    android:onClick="goToSettings"
-                    android:text="@string/settings"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:layout_marginEnd="@dimen/_10sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintHorizontal_bias="0.269"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="MissingConstraints" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/settings_button"
+                    android:layout_width="90dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:onClick="goToSettings"
+                    android:shadowColor="#7F000000"
+                    android:shadowDx="-2"
+                    android:shadowDy="-2"
+                    android:shadowRadius="2"
+                    android:src="@drawable/ic_round_settings_24"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.949"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            app:tabTextColor="@color/lightgray"
+            app:tabSelectedTextColor="@color/lightgray"
             android:layout_width="match_parent"
+            android:scrollbarSize="@dimen/_15sdp"
             android:layout_height="wrap_content"
-            app:tabSelectedTextColor="@color/md_theme_light_primary"
-            app:tabTextColor="@color/md_theme_light_onSecondaryContainer"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:background="@color/md_theme_dark_secondary"
-            style="@style/app_theme"/>
+            android:background="@color/statusbar"
+            tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
+        android:background="@drawable/background_for_home"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:ignore="SpeakableTextPresentCheck" />
