--- a/app/src/main/res/layout/activity_pattern.xml
+++ b/app/src/main/res/layout/activity_pattern.xml
@@ -143,7 +143,7 @@
         android:id="@+id/btnSetPattern"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_40sdp"
-        android:background="@drawable/custtom_button"
+        android:background="@color/md_theme_light_secondaryContainer"
         android:fontFamily="serif"
         android:shadowColor="#7F000000"
         android:shadowDx="-2"
@@ -165,7 +165,7 @@
         android:id="@+id/Delete_lock_App"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_40sdp"
-        android:background="@drawable/custtom_button"
+        android:background="@color/md_theme_light_secondaryContainer"
         android:fontFamily="serif"
         android:shadowColor="#7F000000"
         android:shadowDx="-2"
